[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stressless"
version = "0.2.0"
description = "Production observability for Claude Agent SDK apps — watch every agent run, score it, surface the waste."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = ["asyncpg>=0.29"]
keywords = ["claude", "agents", "observability", "evals", "anthropic"]

[project.optional-dependencies]
web = ["fastapi>=0.110"]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[project.urls]
Homepage = "https://github.com/slaviquee/stressless"

[project.scripts]
stressless = "stressless.__main__:main"

[tool.setuptools]
packages = ["stressless"]

[tool.setuptools.package-data]
stressless = ["schema.sql"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
